--- a/egyptian/styles/styles.css
+++ b/egyptian/styles/styles.css
@@ -1,149 +1,118 @@
 @import url("../../styles/styles.css");
 
-button {
-	cursor: pointer;
-	font-size: 1.5em;
-	//min-width: 1em;
-	//font-family: rk_egypt-hiero;
-	//color: lightgreen;
-	background: #111;
-	//border-radius: 5px;
-	border: none;
+#hieroglyph_editor {
+	
 }
 
-svg {
-	fill: lightgreen;
-	//outline: 1px solid gold;
-	width: 100%;
-	width: 3em;
-	height: 3.5em;
+#interface {
+	display: grid;
+	//grid-template-columns: repeat(1, 1fr);
+	//grid-template-rows: auto repeat(3, 1fr);
+	gap: .5em;
+	padding: .5em;
+	//background: #ffb60088;
+	background: gray;
+	//box-sizing: border-box;
 }
 
-textarea {
+#preview_area {
+	color: gold;
+	font-size: 3em;
+	padding: .5rem;
+	min-height: 4rem;
+	//min-height: 53px;
+	max-height: 11rem;
+	background: #000;
+	outline: 1px solid lightgreen;
+	color: #ffb60000;
+	transition: color .5s ease-in-out;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	//box-sizing: border-box;
+}
+
+#typing_area {
+	padding: 0em;
+	margin: 0;
+	display: block;
+}
+
+#typing_area textarea {
 	background: linear-gradient(to right, #111, #222);
+	//background: white;
+	color: lightgreen;
+	padding: .5rem;
+	font-size: 3em;
+	display: block;
+	width: 100%;
+	max-width: 100%;
+	min-height: 4rem;
+	max-height: 11rem;
+	outline: 1px solid lightgreen;
+	resize: none;
+	border: none;
+	height: 100%;
+	box-sizing: border-box;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 #format_control_buttons {
+	//background: blue;
 	display: flex;
-	//max-width: 100%;
-	//box-sizing: border-box;
 	flex-wrap: wrap;
+	gap: 5px;
+	//overflow-x: auto;
+	//resize: horizontal;
+	//resize: none;
+	//max-height: 100px;
+	//flex-basis: content;
 }
 
-#uFE00:after {
-	content: "\fe00";
+#format_control_buttons > * {
+	background: linear-gradient(-225deg, maroon, black);
+	background: gray;
+	background: #111;
+	background: lightgreen;
+	background: #000;
+	width: 3em;
+	padding: 5px;
+	border: 1px solid black;
+	border: none;
+	
 }
-.u13430:after {
-	content: "\13430";
+
+#format_control_buttons p {
+	margin: 0;
+	background: lightblue;
 }
-.u13431:after {
-	content: "\13431";
+
+#format_control_buttons p span:first-child {
+	display: none;
 }
-.u13432:after {
-	content: "\13432";
+
+#format_control_buttons p span:last-child {
+	display: none;
 }
-.u13433:after {
-	content: "\13433";
+
+#format_control_buttons button {
+	background: lightgreen;
+	background: transparent;
+	aspect-ratio: 1;
+	padding: 0;
+	display: block;
+	cursor: pointer;
+	border: none;
+	 font-family: rk_egypt-hiero-pdf;
+	color: lightgreen;
+	font-size: 3em;
+	width: 100%;
 }
-.u13434:after {
-	content: "\13434";
-}
-.u13435:after {
-	content: "\13435";
-}
-.u13436:after {
-	content: "\13436";
-}
-.u13437:after {
-	content: "\13437";
-}
-.u13438:after {
-	content: "\13438";
-}
-.u13439:after {
-	content: "\13439";
-}
-.u1343A:after {
-	content: "\1343A";
-}
-.u1343B:after {
-	content: "\1343B";
-}
-.u1343C:after {
-	content: "\1343C";
-}
-.u1343D:after {
-	content: "\1343D";
-}
-.u1343E:after {
-	content: "\1343E";
-}
-.u1343F:after {
-	content: "\1343F";
-}
-.u13440:after {
-	content: "\13440";
-}
-.u13441:after {
-	content: "\13441";
-}
-.u13442:after {
-	content: "\13442";
-}
-.u13443:after {
-	content: "\13443";
-}
-.u13444:after {
-	content: "\13444";
-}
-.u13445:after {
-	content: "\13445";
-}
-.u13446:after {
-	content: "\13446";
-}
-.u13447:after {
-	content: "\13447";
-}
-.u13448:after {
-	content: "\13448";
-}
-.u13449:after {
-	content: "\13449";
-}
-.u1344A:after {
-	content: "\1344A";
-}
-.u1344B:after {
-	content: "\1344B";
-}
-.u1344C:after {
-	content: "\1344C";
-}
-.u1344D:after {
-	content: "\1344D";
-}
-.u1344E:after {
-	content: "\1344E";
-}
-.u1344F:after {
-	content: "\1344F";
-}
-.u13450:after {
-	content: "\13450";
-}
-.u13451:after {
-	content: "\13451";
-}
-.u13452:after {
-	content: "\13452";
-}
-.u13453:after {
-	content: "\13453";
-}
-.u13454:after {
-	content: "\13454";
-}
-.u13455:after {
-	content: "\13455";
+
+#format_control_buttons img {
+	display: block;
+	background: lightgreen;
+	mix-blend-mode: difference;
+	width: 100%;
+	aspect-ratio: 1;
 }
