--- a/egyptian/styles/styles.css
+++ b/egyptian/styles/styles.css
@@ -117,3 +117,47 @@
 	width: 100%;
 	aspect-ratio: 1;
 }
+
+#extended {
+	color: goldenrod;
+	line-height: 1.5;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	//gap: .5em;
+	margin-top: .5em;
+	box-sizing: border-box;
+	width: 100%;
+	justify-content: space-between;
+	//align-content: stretch;
+}
+
+#extended > * {
+	border: 1px solid gray;
+	//font-size: 1.5em;
+	width: 10%;
+	display: inline-flex;
+	justify-content:space-between;
+	align-items: center;
+	padding: 0 .2em;
+}
+
+#extended .hex {
+	padding-left: .2em;
+}
+
+#extended .dec {
+	display: none;
+}
+
+#extended .hex,
+#extended .dec {
+	font-family: monospace;
+	font-size: .75em;
+}
+
+#extended .glyph {
+	position: relative;
+	bottom: -5px;
+	font-size: 2em;
+}
