update extended hieroglyphs list

--- a/egyptian/extended/styles/styles.css
+++ b/egyptian/extended/styles/styles.css
@@ -1,122 +1,4 @@
-@import url("../../styles/styles.css");
-
-#hieroglyph_editor {
-	
-}
-
-#interface {
-	display: grid;
-	//grid-template-columns: repeat(1, 1fr);
-	//grid-template-rows: auto repeat(3, 1fr);
-	gap: .5em;
-	padding: .5em;
-	//background: #ffb60088;
-	background: gray;
-	//box-sizing: border-box;
-}
-
-#preview_area {
-	color: gold;
-	font-size: 3em;
-	padding: .5rem;
-	min-height: 4rem;
-	//min-height: 53px;
-	max-height: 11rem;
-	background: #000;
-	outline: 1px solid lightgreen;
-	color: #ffb60000;
-	transition: color .5s ease-in-out;
-	overflow-x: hidden;
-	overflow-y: scroll;
-	//box-sizing: border-box;
-}
-
-#typing_area {
-	padding: 0em;
-	margin: 0;
-	display: block;
-}
-
-#typing_area textarea {
-	background: linear-gradient(to right, #111, #222);
-	//background: white;
-	color: lightgreen;
-	padding: .5rem;
-	font-size: 3em;
-	display: block;
-	width: 100%;
-	max-width: 100%;
-	min-height: 4rem;
-	max-height: 11rem;
-	outline: 1px solid lightgreen;
-	resize: none;
-	border: none;
-	height: 100%;
-	box-sizing: border-box;
-	overflow-x: hidden;
-	overflow-y: scroll;
-}
-
-#format_control_buttons {
-	//background: blue;
-	display: flex;
-	flex-wrap: wrap;
-	gap: 5px;
-	//overflow-x: auto;
-	//resize: horizontal;
-	//resize: none;
-	//max-height: 100px;
-	//flex-basis: content;
-}
-
-#format_control_buttons > * {
-	background: linear-gradient(-225deg, maroon, black);
-	background: gray;
-	background: #111;
-	background: lightgreen;
-	background: #000;
-	width: 3em;
-	padding: 5px;
-	border: 1px solid black;
-	border: none;
-	
-}
-
-#format_control_buttons p {
-	display: none;
-	margin: 0;
-	background: lightblue;
-}
-
-#format_control_buttons p span:first-child {
-	display: none;
-}
-
-#format_control_buttons p span:last-child {
-	display: none;
-}
-
-#format_control_buttons button {
-	background: lightgreen;
-	background: transparent;
-	aspect-ratio: 1;
-	padding: 0;
-	display: block;
-	cursor: pointer;
-	border: none;
-	 font-family: rk_egypt-hiero-pdf;
-	color: lightgreen;
-	font-size: 3em;
-	width: 100%;
-}
-
-#format_control_buttons img {
-	display: block;
-	background: lightgreen;
-	mix-blend-mode: difference;
-	width: 100%;
-	aspect-ratio: 1;
-}
+@import url("../../../styles/styles.css");
 
 #extended {
 	color: goldenrod;
@@ -135,7 +17,7 @@
 #extended > * {
 	border: 1px solid gray;
 	//font-size: 1.5em;
-	width: 10%;
+	width: 9rem;
 	display: inline-flex;
 	justify-content:space-between;
 	align-items: center;
