--- a/styles/interactive.css
+++ b/styles/interactive.css
@@ -1,41 +1,3 @@
-.collapse:has(> h2) > :not(h2):not(h3) {
-	display: none;
-}
-
-.collapse:has(> h3) > :not(h3) {
-	display: none;
-}
-
-.entry.collapse > ul {
-	display: none;
-}
-
-
-
-h2, h3 {
-	position: relative;
-	left: 1em;
-}
-
-h2, h3, li.entry {
-	//position: relative;
-	//left: 1em;
-}
-
-:is(h2, h3):hover:before {
-	color: #ffb600ff;
-}
-
-.entry:hover:before {
-	color: #ffb600ff;
-}
-
-.collapse :is(h2, h3):before {
-	transform: rotate(0deg);
-}
-
-
-
 :is(h2, h3):before {
 	content: "▷";
 	position: absolute;
@@ -48,22 +10,49 @@ h2, h3, li.entry {
 		color .2s ease-in-out;
 }
 
-li.entry {
-	position: relative;
-	left: 1em;
-	line-height: 1.5;
+.collapse:has(> h2) > :not(h2):not(h3) {
+	display: none;
 }
 
-li.entry:before {
+.collapse:has(> h3) > :not(h3) {
+	display: none;
+}
+
+h2, h3 {
+	position: relative;
+	left: 1em;
+}
+
+:is(h2, h3):hover:before {
+	color: #ffb600ff;
+}
+
+.collapse :is(h2, h3):before {
+	transform: rotate(0deg);
+}
+
+
+
+.entry > ul > li:first-child:before {
 	content: "▷";
 	color: #ffb60022;
 	position: absolute;
 	left: -1em;
 	transform: rotate(90deg);
-	transition: transform .2s ease-in-out;
+	transition:
+		transform .2s ease-in-out,
+		color .2s ease-in-out;
 	line-height: 1.5;
 }
 
-li.entry.collapse:before {
+.entry > ul:hover > li:first-child:before {
+	color: #ffb600ff;
+}
+
+.entry > ul > li:first-child.collapse:before {
 	transform: rotate(0deg);
+}
+
+.entry > ul > li:first-child.collapse + li {
+	display: none;
 }
