--- a/coptic/crum/styles/styles.css
+++ b/coptic/crum/styles/styles.css
@@ -1,64 +1,16 @@
 @import url("../../../styles/styles.css");
+@import url("../../styles/styles.css");
 
-#menu {
-	border: 1px solid #ccc;
-	display: none;
-}
 
-i.dialect {
-	color: steelblue;
-}
-
-sup {
-	line-height: 0;
-}
-
-.entry * {
-	line-height: 1.5;
-}
-
-.dialect sup {
-	font-size: inherit;
-	font-size: .5em;
-	padding-left: 0;
-}
-
-.dialect.lycopolitan sup {
-	font-style: normal;
-}
-
-p sup {
-	line-height: 0;
-}
-
-p sup a {
-	color: #ffb600;
-	font-size: 80%;
-	font-size: .5em;
-	text-decoration: none;
-}
-
-#preface .footnotes a {
-	color: lime;
-	text-decoration: none;
-	padding-right: 5px;
-	user-select: none;
-}
 
 #preface .footnotes li:target {
 	background: #ffb60022;
 }
 
-
-
 #additions_and_corrections ul,
 #list_of_abbreviations ul {
 	padding-left: .5em;
 	list-style-type: none;
-}
-
-#list_of_abbreviations > ul > li {
-	//display: table;
 }
 
 #list_of_abbreviations > ul > li > ul {
@@ -89,136 +41,69 @@ p sup a {
 	display: none;
 }
 
-#list_of_abbreviations li a {
-	text-decoration: none;
+#list_of_abbreviations {
+	--archive: url(./archive.jpg);
+	--google-books: url(./google-books.png);
+	--hathi-trust: url(./hathitrust.png);
+	--jstor: url(./jstor_16.png);
+	--scribd: url(./scribd.ico);
+	--uni-bonn: url(./uni-bonn.ico);
+	--bnf: url(./bnf.ico);
+	--getty: url(./getty.png);
 }
 
-#list_of_abbreviations li a:before {
+#list_of_abbreviations li .cell:has(> a) a:before {
 	content: "[↵]";
 	color: gold;
-}
-
-#list_of_abbreviations li a[href^="https://archive.org/"]:before,
-#list_of_abbreviations li a[href^="https://books.google.com/"]:before,
-#list_of_abbreviations li a[href^="https://babel.hathitrust.org/"]:before,
-#list_of_abbreviations li a[href^="https://www.jstor.org/"]:before,
-#list_of_abbreviations li a[href^="https://www.scribd.com/"]:before,
-#list_of_abbreviations li a[href^="https://digitale-sammlungen.ulb.uni-bonn.de/"]:before,
-#list_of_abbreviations li a[href^="http://archives.getty.edu"]:before,
-#list_of_abbreviations li a[href^="https://gallica.bnf.fr/"]:before {
-	content: "";
+	background-size: 16px 16px;
+	width: 16px;
+	height: 16px;
 	display: inline-block;
 	vertical-align: middle;
 }
 
-#list_of_abbreviations li a[href^="https://archive.org/"]:before {
-	background-image: url("./archive.jpg");
-	background-size: 20px 20px;
-	width: 20px;
-	height: 20px;
+#list_of_abbreviations li .cell :is(
+	a[href^="https://archive.org/"],
+	a[href^="https://books.google.com/"],
+	a[href^="https://babel.hathitrust.org/"],
+	a[href^="https://www.jstor.org/"],
+	a[href^="https://www.scribd.com/"],
+	a[href^="https://digitale-sammlungen.ulb.uni-bonn.de/"],
+	a[href^="https://gallica.bnf.fr/"],
+	a[href^="http://archives.getty.edu"]
+	):before {
+	content: "";
+}
+
+#list_of_abbreviations li .cell a[href^="https://archive.org/"]:before {
+	background-image: var(--archive);
 	mix-blend-mode: screen;
 }
 
 #list_of_abbreviations li a[href^="https://books.google.com/"]:before {
-	background-image: url("./google-books.png");
-	background-size: 20px 20px;
-	width: 20px;
-	height: 20px;
+	background-image: var(--google-books);
 }
 
 #list_of_abbreviations li a[href^="https://babel.hathitrust.org/"]:before {
-	background-image: url("./hathitrust.png");
-	background-size: 20px 20px;
-	width: 20px;
-	height: 20px;
+	background-image: var(--hathi-trust);
 }
 
 #list_of_abbreviations li a[href^="https://www.jstor.org/"]:before {
-	background-image: url("./jstor_16.png");
-	background-size: 16px 16px;
-	width: 16px;
-	height: 16px;
+	background-image: var(--jstor);
 }
 
 #list_of_abbreviations li a[href^="https://www.scribd.com/"]:before {
-	background-image: url("./scribd.ico");
-	background-size: 16px 16px;
-	width: 16px;
-	height: 16px;
+	background-image: var(--scribd);
 }
 
 #list_of_abbreviations li a[href^="https://digitale-sammlungen.ulb.uni-bonn.de/"]:before {
-	background-image: url("./uni-bonn.ico");
-	background-size: 16px 16px;
-	width: 16px;
-	height: 16px;
+	background-image: var(--uni-bonn);
 }
 
 #list_of_abbreviations li a[href^="https://gallica.bnf.fr/"]:before {
-	background-image: url("./bnf.ico");
-	background-size: 16px 16px;
-	width: 16px;
-	height: 16px;
+	background-image: var(--bnf);
 }
 
 #list_of_abbreviations li a[href^="http://archives.getty.edu"]:before {
-	background-image: url("./getty.png");
-	background-size: 16px 16px;
-	width: 16px;
-	height: 16px;
+	background-image: var(--getty);
 }
-
-#dictionary {
-	//outline: 1px solid #ffb600aa;
-}
-
-#dictionary ul {
-	list-style-type: none;
-	padding-left: .5em;
-}
-
-#dictionary > ul {
-	padding-left: 1em;
-}
-
-#dictionary > ul li {
-	margin-top: .0em;
-}
-
-
-#dictionary .entry li.group {
-	margin-top: .5em;
-	list-style-type: none;
-	width: calc(100% - 1em);
-}
-
-#dictionary .entry .group > ul {
-	background: #ff00ff11;
-	border-left: 1px solid #ffffff55;
-	border-bottom: 1px solid #ffffff55;
-	border: 1px solid #ffffff55;
-	//list-style-position: inside;
-}
-
-#dictionary .entry .pos,
-#dictionary .entry .subsection {
-	margin-top: .5em
-}
-
-#dictionary .entry > ul > li:first-child {
-	position: sticky;
-	top: 0;
-	background: #111;
-}
-
-.headword {
-	color: violet;
-	font-family: rk_coptic;
-	font-size: 1.2em;
-	line-height: inherit;
-}
-
-#dictionary .entry li.group ul {
-	padding: .2em .5em;
-}
-
