--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,6 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
-	//text-transform: uppercase;
 	margin: 0;
 }
 
@@ -30,13 +29,8 @@ a {
 	text-decoration: none;
 	color: lightgreen;
 }
-
-img {
-	max-width: 300px;
-}
-
 #container {
 	display: flex;
-	text-direction: row;
+	flex-direction: row;
 	flex-wrap: wrap;
 }
