--- a/egyptian/extended/styles/styles.css
+++ b/egyptian/extended/styles/styles.css
@@ -2,44 +2,104 @@
 
 #extended {
 	color: goldenrod;
-	line-height: 1.5;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	//gap: .5em;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: .5em .5em;
 	margin-top: .5em;
 	box-sizing: border-box;
 	width: 100%;
-	justify-content: space-between;
-	//align-content: stretch;
 }
 
 #extended > * {
-	border: 1px solid gray;
-	//font-size: 1.5em;
-	width: 9rem;
-	display: inline-flex;
-	justify-content:space-between;
+	//border: 1px solid gray;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	/*
+	display: flex;
+	//justify-content: space-between;
+	//align-items: normal;
+	*/
+	//gap: 1em;
+}
+
+#extended .pdf {
+	
+}
+
+#extended .real {
+	order: -1;
+}
+
+#extended .real .real-hex {
+	color: lightgreen;
+}
+
+#extended :is(.real, .pdf) {
+	background: #ffffff22;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+}
+
+#extended :is(.real, .pdf) > div {
+	display: grid;
+}
+
+#extended :is(.real, .pdf) > div:has(.hex),
+#extended :is(.real, .pdf) > div:has(.real-hex) {
+	margin: .2em;
+}
+
+#extended :is(.real) > div:has(.real-glyph),
+#extended :is(.pdf) > div:has(.glyph) {
+	display: flex;
 	align-items: center;
-	padding: 0 .2em;
 }
 
-#extended .hex {
-	padding-left: .2em;
-}
-
-#extended .dec {
-	display: none;
+#extended :is(.pdf) > div:has(.glyph) {
+	
 }
 
 #extended .hex,
-#extended .dec {
+#extended .dec,
+#extended .oct,
+#extended .real-glyph {
+	display: none;
+}
+
+#extended :is(.pdf) > div:has(.hex),
+#extended :is(.real) > div:has(.real-glyph) {
+	display: none;
+}
+
+
+#extended .hex,
+#extended .dec,
+#extended .oct,
+#extended .real-hex,
+#extended .real-dec,
+#extended .real-oct {
 	font-family: monospace;
 	font-size: .75em;
+	display: block;
+	text-transform: uppercase;
+	margin: .2em;
+}
+
+#extended .glyph,
+#extended .real-glyph {
+	display: block;
+	margin: 0;
+	padding: 0;
 }
 
 #extended .glyph {
-	position: relative;
-	bottom: -5px;
-	font-size: 2em;
+	font-family: rk_egypt-hiero-pdf-2;
+	font-size: 1em;
+	scale: 3;
+	padding-left: .5em;
+}
+
+#extended .real-glyph {
+	font-family: rk_egypt-hiero;
+	font-size: 3em;
 }
