--- a/egyptian/styles/styles.css
+++ b/egyptian/styles/styles.css
@@ -3,13 +3,73 @@
 #interface {
 	display: grid;
 	gap: .5em;
-	padding: .5em;
 }
 
-#info code {
-	background: #000000;
-	color: pink;
+#info {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	//grid-template-rows: repeat(2, 1fr);
+	grid-column-gap: .5em;
+	grid-row-gap: 0px;
+	line-height: 1.5;
+}
+
+#info b {
+	color: gold;
+	text-decoration: underline;
+}
+
+#info > div {
+	//background: #000000;
+}
+
+#info > div:nth-child(1) {
+	grid-area: 1 / 1 / 2 / 3;
+}
+#info > div:nth-child(2) {
+	grid-area: 2 / 1 / 3 / 2;
+}
+#info > div:nth-child(3) {
+	grid-area: 2 / 2 / 3 / 3;
+}
+
+a[href^="https://en.wikipedia.org"] {
+	white-space: nowrap;
+}
+
+a[href^="https://en.wikipedia.org"]:before {
+	content: "";
+	background-size: 16px 16px;
+	height: 16px;
+	width: 16px;
+	margin-right: .2em;
+	display: inline-block;
+	vertical-align: middle;
+	background-image: url(../images/wikipedia.ico);
+}
+
+#info span {
+	//background: #000000;
+	color: lightgreen;
 	font-family: monospace;
+	//outline: 1px solid gray;
+	border-radius: 5px;
+	//min-width: 15px;
+	//padding: 0 .2em;
+	//display: inline-block;
+	//line-height: 2;
+	//text-align: center;
+	//vertical-align: middle;
+	margin-right: .2em;
+	//margin-top: .5em;
+}
+
+#info span.egypt-hiero {
+	//line-height: 1;
+	font-size: 1em;
+	max-height: 1em;
+	margin-top: 0;
+	vertical-align: middle;
 }
 
 fieldset {
@@ -34,7 +94,7 @@ fieldset:before {
 }
 
 fieldset > div {
-	font-size: 1.5em;
+	font-size: 3em;
 	box-sizing: border-box;
 	position: relative;
 	max-height: 6rem;
@@ -48,6 +108,9 @@ legend {
 #button_container {
 	overflow-y: scroll;
 	height: 25vh;
+	margin-top: 1em;
+	border: 1px solid lightgreen;
+	padding-bottom: 1em;
 }
 
 
@@ -73,13 +136,13 @@ legend {
 
 #preview_area {
 	color: lightblue !important;
-	font-family: monospace, rk_egypt-hiero;
+	font-family: monospace, rk_coptic, rk_egypt-hiero;
 	z-index: -999;
 }
 
 #schematic_area {
 	color: #ffb60000;
-	font-family: monospace, rk_egypt-hiero-pdf, rk_variant-selectors;
+	font-family: monospace, rk_coptic, rk_egypt-hiero-pdf, rk_variant-selectors;
 	//pointer-events: none;
 	//user-select: none;
 	z-index: -999;
@@ -89,7 +152,7 @@ legend {
 	background: #000000;
 	box-sizing: border-box;
 	display: block;
-	font-family: monospace;
+	font-family: monospace, rk_coptic, rk_egypt-hiero;
 	color: lightgreen;
 	width: 100% !important;
 	//line-break: anywhere;
@@ -126,12 +189,24 @@ fieldset pre {
 	gap: .2em;
 }
 
+#format_control_buttons {
+	margin-top: 1em;
+}
+
 #format_control_buttons,
 #hieroglyphs {
 	display: flex;
 	flex-wrap: wrap;
 	gap: .2em;
 	justify-content: center;
+}
+
+#format_control_buttons > * {
+	//margin-top: .1em;
+	background: #222222;
+	border-radius: 5px;
+	border: 1px solid #ffffff11;
+	padding-bottom: .5em;
 }
 
 #format_control_buttons > *,
@@ -161,10 +236,10 @@ fieldset pre {
 }
 
 #format_control_buttons p span:last-child:before {
-	content: "⃣";
+	//content: "⃣";
 	font-size: 1.5em;
 	position: relative;
-	top: 1em;
+	//top: 1em;
 	//left: 0em;
 	//text-align: center;
 	display: block;
@@ -186,7 +261,7 @@ fieldset pre {
 	border: none;
 	font-family: rk_egypt-hiero-pdf, rk_variant-selectors;
 	color: lightgreen;
-	font-size: 3em;
+	font-size: 1em;
 	width: 100%;
 	scale: 1;
 	//user-select: none;
@@ -199,7 +274,7 @@ fieldset pre {
 #hieroglyphs button {
 	border: 1px solid #333333cc;
 	background: #ffffff11;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 
 #format_control_buttons button:hover,
